new-code/development/kafka-dev/ingress-rule-kafka.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ingress
  namespace: kb
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: kb.isgapps.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-all-broker
            port:
              number: 29092
